# GSlab

./: .gitignore  CMakeLists.txt  README.md  run_hacker.sh  run_victim.sh
.cache/clangd/index/: android_log.h.4B4FA49301EC06E1.idx  android_log.h.BB9B8E1806E8C153.idx  hacker.cpp.1AC760555837DC1A.idx  hacker.cpp.5001400F54C1D809.idx  hacker.cpp.821712BE4499C3FC.idx  hook.h.55F23EE476DA4DD2.idx  hook.h.65DB17E5B2DDC280.idx  inject.h.FF5A4553CF67D98C.idx  libhacker.cpp.1B47CBF65CB5F39F.idx  libhacker.cpp.5EFA03B9B34A0E5B.idx  my_inject.cpp.E0EBEF41CEB7C1B5.idx  my_inject.h.9FF9A0CED7299924.idx  ptrace_inject.cpp.75998F30993935C1.idx  ptrace_inject.cpp.F4CD64B43B77DF3A.idx  ptrace_inject.h.492C946AC9DA3ACC.idx  ptrace_inject.h.DB37161B78EF8AD9.idx  utils.cpp.6C9980DAF0DB189F.idx  utils.h.CE0B82AD3DFE3BAA.idx  utils.h.D188F8A93D230AAB.idx  victim.cpp.E627F343B93D6F12.idx
Hacker/: CMakeLists.txt
Hacker/Exec/src/: hacker.cpp
Hacker/Hook/: CMakeLists.txt
Hacker/Inject/: CMakeLists.txt
Hacker/Inject/include/: my_inject.h  ptrace_inject.h
Hacker/Inject/src/: my_inject.cpp  ptrace_inject.cpp
Hacker/Lib/src/libhacker/: libhacker.cpp
Hacker/Utils/: CMakeLists.txt
Hacker/Utils/include/: android_log.h  utils.h
Hacker/Utils/src/: utils.cpp
Output/: Hacker  Victim
Victim/: CMakeLists.txt
Victim/src/: victim.cpp
